--- a/03-python-operators-conditional-statements.ipynb
+++ b/03-python-operators-conditional-statements.ipynb
@@ -142,23 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "87a23437",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2772452277.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [1]\u001b[1;36m\u001b[0m\n\u001b[1;33m    y=(1:'a',2:'b')\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
    "source": [
     "#Membership operators\n",
     "x = 'hello world'\n",
-    "y=(1:'a',2:'b')\n",
     "\n",
     "print('h'in x)"
    ]
