--- a/09-random-module.ipynb
+++ b/09-random-module.ipynb
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pssaword generator\n",
+    "#password generator\n",
     "az =''\n",
     "for i in range(97,123):\n",
     "    az += chr(i)\n",
