--- a/04-python-lists.ipynb
+++ b/04-python-lists.ipynb
@@ -610,11 +610,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('pink', 'black')\n"
+     ]
+    }
+   ],
    "source": [
-    "#"
+    "listx =[\"pink\",\"black\"]\n",
+    "tuplex=tuple(listx)\n",
+    "print(tuplex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pinkblack\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = ''.join(tuplex)\n",
+    "print(str)"
    ]
   }
  ],
