--- a/06-python-functions.ipynb
+++ b/06-python-functions.ipynb
@@ -525,10 +525,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "factorial of  13 is 6227020800\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n < 0:\n",
+    "        return 0\n",
+    "    elif n ==0 or n==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        fact = 1\n",
+    "        while (n > 1):\n",
+    "            fact*= n \n",
+    "            n-= 1\n",
+    "        return fact\n",
+    "num = 13\n",
+    "print(\"factorial of \",num,\"is\",factorial(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "862453760\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "import numpy\n",
+    "n=23\n",
+    "x =numpy.prod([i for i in range(1,n+1)])\n",
+    "print(x)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the principle is 8\n",
+      "the time period is 9\n",
+      "rate of interest is 8\n",
+      "the simple interest is 5.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simple_intrest(p,t,r):\n",
+    "    print('the principle is',p)\n",
+    "    print('the time period is',t)\n",
+    "    print('rate of interest is',r)\n",
+    "\n",
+    "    si = (p*t*r)/100\n",
+    "    print('the simple interest is',si)\n",
+    "    \n",
+    "simple_intrest(8,9,8)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area of 113.11200\n"
+     ]
+    }
+   ],
+   "source": [
+    "def findarea(r):\n",
+    "    PI = 3.142\n",
+    "    return PI *(r*r)\n",
+    "print(\"area of %.5f\" % findarea(6)) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#recursive funtion\n",
+    "list1=[12,14,15,19]\n",
+    "\n",
+    "def sumoflist(list,size):\n",
+    "    if (size==0):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return list[size - 1] "
+   ]
   }
  ],
  "metadata": {
