--- a/06-python-functions.ipynb
+++ b/06-python-functions.ipynb
@@ -624,9 +624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum of all the numbers is 60\n"
+     ]
+    }
+   ],
    "source": [
     "#recursive funtion\n",
     "list1=[12,14,15,19]\n",
@@ -635,7 +643,62 @@
     "    if (size==0):\n",
     "        return 0\n",
     "    else:\n",
-    "        return list[size - 1] "
+    "        return list[size - 1] + sumoflist(list,size -1)\n",
+    "\n",
+    "total =sumoflist(list1,len(list1))\n",
+    "print(\"sum of all the numbers is\",total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the filtered letters are \n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(variable):\n",
+    "    letters =['a','e','i','o','u']\n",
+    "    if variable in letters:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "seq =['s','d','h','h']\n",
+    "\n",
+    "filtered = filter(fun,seq)\n",
+    "print('the filtered letters are ')\n",
+    "for s in filtered :\n",
+    "    print(list(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 7, 5, 3, 1]\n",
+      "[0, 8, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq =[0,9,8,7,6,5,4,3,2,1]\n",
+    "result = filter(lambda x:x%2 !=0,seq)\n",
+    "print(list(result))\n",
+    "\n",
+    "result= filter(lambda x:x%2 ==0,seq)\n",
+    "print(list(result))"
    ]
   }
  ],
