--- a/002-basic-string-program.ipynb
+++ b/002-basic-string-program.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-  reverse words in a give string"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -137,6 +144,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- replacing the characters from the string"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -227,6 +241,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- program to print even length words in a string"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -293,6 +314,146 @@
     "        print(i)\n",
     "      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = \"This is a python launguage\"\n",
+    "s = n.split(\" \")\n",
+    "for i in s:\n",
+    "    if len(i)%6==0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printwords(s):\n",
+    "    s =\"this is easy language\"\n",
+    "    s=s.split(' ')\n",
+    "    for i in s:\n",
+    "        if len(i)%2==0:\n",
+    "            print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this\n",
+      "is\n",
+      "easy\n",
+      "language\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(printwords(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "filter expected 2 arguments, got 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Python\\python_practice\\002-basic-string-program.ipynb Cell 23\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Python/python_practice/002-basic-string-program.ipynb#X32sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m n \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mthis is easy language\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Python/python_practice/002-basic-string-program.ipynb#X32sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m s\u001b[39m=\u001b[39mn\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Python/python_practice/002-basic-string-program.ipynb#X32sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m l\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m(\u001b[39mfilter\u001b[39;49m(\u001b[39mlambda\u001b[39;49;00m x : (\u001b[39mlen\u001b[39;49m(x)\u001b[39m%\u001b[39;49m\u001b[39m2\u001b[39;49m\u001b[39m==\u001b[39;49m\u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49ms))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Python/python_practice/002-basic-string-program.ipynb#X32sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(s)\n",
+      "\u001b[1;31mTypeError\u001b[0m: filter expected 2 arguments, got 1"
+     ]
+    }
+   ],
+   "source": [
+    "n = \"this is easy language\"\n",
+    "s=n.split(' ')\n",
+    "l=list(filter(lambda x : (len(x)%2==0).s))\n",
+    "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'is', 'easy', 'language']\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=\"this is easy language\"\n",
+    "s=n.split(' ')\n",
+    "print([x for x in s if len(x)%2==0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- using slicing and upper()and split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string before : this is easy language\n",
+      "string after: ThiS IS EasY LanguagE\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using slicing and upper() and split()\n",
+    "n = \"this is easy language\"\n",
+    "print(\"string before :\",n)\n",
+    "a =n.split(' ')\n",
+    "res =[]\n",
+    "for i in a:\n",
+    "    x=i[0].upper()+i[1:-1]+i[-1].upper()\n",
+    "    res.append(x)\n",
+    "res=\" \".join(res)\n",
+    "print(\"string after:\",res) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
