--- a/002-basic-string-program.ipynb
+++ b/002-basic-string-program.ipynb
@@ -450,6 +450,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string before: python is a programming language\n",
+      "string after: PthN IS AA PogrammiG LnguaE\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = \"python is a programming language\"\n",
+    "print(\"string before:\",n)\n",
+    "a =n.split(' ')\n",
+    "res =[]\n",
+    "for i in a:\n",
+    "    x =i[0].upper()+i[2:-2]+i[-1].upper()\n",
+    "    res.append(x)\n",
+    "res=' '.join(res)\n",
+    "print(\"string after:\",res)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
