--- a/002-basic-string-program.ipynb
+++ b/002-basic-string-program.ipynb
@@ -475,6 +475,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- program to cheak if a string has at least one letter and one number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cheakstring(str):\n",
+    "    flag_l = False\n",
+    "    flag_n = False\n",
+    "\n",
+    "    for i in str:\n",
+    "        if i.isalpha():\n",
+    "            flag_l = True\n",
+    "        if i.isdigit():\n",
+    "            flag_n = True\n",
+    "    return flag_l and flag_n\n",
+    "print(cheakstring(\"they 2 are busy \"))\n",
+    "print(cheakstring(\"hey there\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cheakstring(str):\n",
+    "    flag_l = False\n",
+    "    for i in str:\n",
+    "        if i.isalpha():\n",
+    "          flag_l = True\n",
+    "        if i.isdigit():\n",
+    "            flag_l= True\n",
+    "    return flag_l\n",
+    "print(cheakstring(\"hey there3\")) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cheakstring(str):\n",
+    "    for i in str:\n",
+    "        if i.isdigit():\n",
+    "            flag_l =True\n",
+    "        else:\n",
+    "            flag_l = False\n",
+    "    return flag_l\n",
+    "print(cheakstring(\"hey there\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chaekstring(str):\n",
+    "    for i in str:\n",
+    "        if i.isalpha():\n",
+    "            flag_n=True\n",
+    "        else:\n",
+    "            flag_n= False\n",
+    "    return flag_n\n",
+    "print(cheakstring(\"hey there \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cheak(string):\n",
+    "    string=string.lower()\n",
+    "    vowel_1 =set('aeiou')\n",
+    "    string_1= set({})\n",
+    "    for character_1 in string:\n",
+    "        if character_1 in vowel_1:\n",
+    "            string_1.add(charcter_1)\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "        if len(string_1)==len(vowel_1):\n",
+    "            print(\"the string is accepted\")\n",
+    "        else:\n",
+    "            print(\"the string is not accepted\")\n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
