--- a/002-basic-string-program.ipynb
+++ b/002-basic-string-program.ipynb
@@ -608,6 +608,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- count the numbers of matching characters in a pair of string "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of matching characters are: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count(str1,str2):\n",
+    "    c,j = 0 ,0\n",
+    "    for i in str1:\n",
+    "     if str2.find(i)>=0 and j == str1.find(i):\n",
+    "        c+=1\n",
+    "        j+=1\n",
+    "    print('no. of matching characters are:',c)\n",
+    "\n",
+    "def main():\n",
+    "    str1=\"asjlkjdfsk\"\n",
+    "    str2=\"dhkjhkflda\"\n",
+    "    count(str1,str2)\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    main()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of matching characters are: 1\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "str1=\"asjlkjdfsk\"\n",
+    "str2=\"dhkjhkflda\"    \n",
+    "print(count(str1,str2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- simplified way "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of matching characters are: 7\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1=\"asdfghjkl\"\n",
+    "str2 =\"dfhasjgyd\"\n",
+    "print(count(str1,str2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of matching characters are: 1\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "l =\"hiiiamsrushti\"\n",
+    "n =\"whatsyourname\"\n",
+    "print(count(l,n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original list 1 : [5, 7, 8, 9, 10, 11]\n",
+      "The original list 2 : [8, 10, 11]\n",
+      "the matching indices : []\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 =[5,7,8,9,10,11]\n",
+    "list_2 =[8,10,11]\n",
+    "print(\"The original list 1 :\",list_1)\n",
+    "print(\"The original list 2 :\",list_2)\n",
+    "\n",
+    "res =[]\n",
+    "i =0\n",
+    "while (i < len(list_1)):\n",
+    "    if (list_2.count(list_1[i]>0)):\n",
+    "        res.append(i)\n",
+    "    i += 1\n",
+    "print(\"the matching indices :\",str(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original list : [5, 7, 8, 9, 10, 11]\n",
+      "The original list : [8, 10, 11]\n",
+      "the matching indices: <generator object <genexpr> at 0x000002B47B685350>\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_list_1= [5,7,8,9,10,11]\n",
+    "test_list_2 =[8,10,11]\n",
+    "print(\"The original list :\",test_list_1)\n",
+    "print(\"The original list :\",test_list_2)\n",
+    "temp =set(test_list_2)\n",
+    "res= (i for i,val in enumerate(test_list_1)if val in temp)\n",
+    "print(\"the matching indices:\",str(res))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
