--- a/004--basic-list-program.ipynb
+++ b/004--basic-list-program.ipynb
@@ -60,6 +60,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 3.program to swap the elements at give position "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[65, 45, 23, 76]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swapPosition(list,pos1,pos2):\n",
+    "    list[pos1],list[pos2]=list[pos2],list[pos1]\n",
+    "\n",
+    "    return list\n",
+    "list =[23,45,65,76]\n",
+    "pos1,pos2 = 1,3\n",
+    "print(swapPosition(list,pos1-1,pos2-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, 34, 34, 45, 67, 123]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swapposition(list,pos1,pos2,pos3):\n",
+    "    list[pos1],list[pos3]=list[pos3],list[pos2]\n",
+    "    return list\n",
+    "list =[12,34,14,45,67,123]\n",
+    "pos1,pos2,pos3 =1,2,3\n",
+    "print(swapposition(list,pos1-1,pos2-1,pos3-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, 12, 34, 45, 67, 123]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swapposition(list,pos1,pos2,pos3):\n",
+    "    list[pos1],list[pos2],list[pos3]=list[pos3],list[pos1],list[pos2]\n",
+    "    return list\n",
+    "list =[12,34,14,45,67,123]\n",
+    "pos1,pos2,pos3 =1,2,3\n",
+    "print(swapposition(list,pos1-1,pos2-1,pos3-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[758, 232, 785, 937, 121, 786]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swapposition(list,pos1,pos3,pos5):\n",
+    "    list[pos1],list[pos3],list[pos5] =list[pos3],list[pos5],list[pos1]\n",
+    "     \n",
+    "    return list\n",
+    "list=[121,232,758,937,785,786]\n",
+    "pos1,pos3,pos5 =1,3,5\n",
+    "print(swapposition(list,pos1-1,pos3-1,pos5-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[758, 232, 785, 937, 758, 786]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swapposition(list,pos1,pos3,pos5):\n",
+    "    list[pos1] =list[pos3]\n",
+    "    list[pos3] =list[pos5]\n",
+    "    list[pos5] =list[pos1]\n",
+    "    return list\n",
+    "list=[121,232,758,937,785,786]\n",
+    "pos1,pos3,pos5 =1,3,5\n",
+    "print(swapposition(list,pos1-1,pos3-1,pos5-1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
