--- a/004--basic-list-program.ipynb
+++ b/004--basic-list-program.ipynb
@@ -182,10 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[134, 134, 134, 156, 176, 987]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swapposition(list,pos1,pos2,pos3):\n",
+    "    list[pos1]=list[pos3]\n",
+    "    list[pos2]=list[pos1]\n",
+    "    list[pos3]=list[pos2]\n",
+    "    return list\n",
+    "list =[123,45,134,156,176,987]\n",
+    "pos1,pos2,pos3 =1,2,3\n",
+    "print(swapposition(list,pos1-1,pos2-1,pos3-1))"
+   ]
   }
  ],
  "metadata": {
