--- a/08-lambda-function.ipynb
+++ b/08-lambda-function.ipynb
@@ -352,7 +352,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from functools import reduce\n",
+    "mylist = [11,22,33,44,55,66]\n"
+   ]
   }
  ],
  "metadata": {
