--- a/004--basic-list-program.ipynb
+++ b/004--basic-list-program.ipynb
@@ -203,6 +203,63 @@
     "pos1,pos2,pos3 =1,2,3\n",
     "print(swapposition(list,pos1-1,pos2-1,pos3-1))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- multiply all the numbers in the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiplylist(mylist):\n",
+    "    result = 1\n",
+    "    for x in mylist :\n",
+    "        result =result * x\n",
+    "        return result\n",
+    "l1 =[1,2,3]\n",
+    "l2 =[2,4,6]\n",
+    "print(multiplylist(l1))\n",
+    "print(multiplylist(l2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "list1 = [1,2,3]\n",
+    "list2 = [2,4,6]\n",
+    "result1 =numpy.prod(list1)\n",
+    "result2 =numpy.prod(list2)\n",
+    "print(result1)\n",
+    "print(result2)"
+   ]
   }
  ],
  "metadata": {
