--- a/04-python-lists.ipynb
+++ b/04-python-lists.ipynb
@@ -644,6 +644,33 @@
     "str = ''.join(tuplex)\n",
     "print(str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#appending and extending in a list\n",
+    "odd = [1,3,5]\n",
+    "\n",
+    "odd.append(7)\n",
+    "\n",
+    "print(odd)\n",
+    "\n",
+    "odd.extend([9,11,13,15])\n",
+    "\n",
+    "print(odd)"
+   ]
   }
  ],
  "metadata": {
