--- a/002-basic-string-program.ipynb
+++ b/002-basic-string-program.ipynb
@@ -770,6 +770,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- reverse the string using loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
