--- a/02-python-strings.ipynb
+++ b/02-python-strings.ipynb
@@ -144,6 +144,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "8f0f7cc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a*6= iamsrushtiiamsrushtiiamsrushtiiamsrushtiiamsrushtiiamsrushti\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =\"iamsrushti\"\n",
+    "print('a*6=',a*6)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "e843fecf",
    "metadata": {},
