--- a/05-python-loops.ipynb
+++ b/05-python-loops.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -296,6 +296,94 @@
     "    print(i * \"* \")\n",
     "    print(\" \" + i * \"*\" +\" \")\n",
     "    print(i * \" *\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      " * \n",
+      "    \n",
+      " * * * * \n",
+      "       \n",
+      " * * * * * * * \n",
+      "          \n",
+      " * * * * * * * * * * \n",
+      "             \n",
+      " * * * * * * * * * * * * * \n",
+      "                \n",
+      " * * * * * * * * * * * * * * * * \n",
+      "                   \n",
+      " * * * * * * * * * * * * * * * * * * * \n",
+      "                      \n",
+      " * * * * * * * * * * * * * * * * * * * * * * \n",
+      "                         \n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * \n",
+      "                            \n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * * * * \n",
+      "                               \n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * \n",
+      "                                  \n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * \n",
+      "                                     \n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,40,3):\n",
+    "    print(i * \" \")\n",
+    "    print(\" \"+i * \"* \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "  \n",
+      "    \n",
+      "     \n",
+      "       \n",
+      "        \n",
+      "          \n",
+      "           \n",
+      "             \n",
+      "              \n",
+      "                \n",
+      "                 \n",
+      "                   \n",
+      "                    \n",
+      "                      \n",
+      "                       \n",
+      "                         \n",
+      "                          \n",
+      "                            \n",
+      "                             \n",
+      "                               \n",
+      "                                \n",
+      "                                  \n",
+      "                                   \n",
+      "                                     \n",
+      "                                      \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,40,3):\n",
+    "    print(i * \" \")\n",
+    "    print(\" \"+i * \" \")"
    ]
   },
   {
