--- a/05-python-loops.ipynb
+++ b/05-python-loops.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -352,38 +352,38 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "  \n",
+      " $ \n",
       "    \n",
-      "     \n",
+      " $ $ $ $ \n",
       "       \n",
-      "        \n",
+      " $ $ $ $ $ $ $ \n",
       "          \n",
-      "           \n",
+      " $ $ $ $ $ $ $ $ $ $ \n",
       "             \n",
-      "              \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                \n",
-      "                 \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                   \n",
-      "                    \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                      \n",
-      "                       \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                         \n",
-      "                          \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                            \n",
-      "                             \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                               \n",
-      "                                \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                                  \n",
-      "                                   \n",
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n",
       "                                     \n",
-      "                                      \n"
+      " $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ $ \n"
      ]
     }
    ],
    "source": [
     "for i in range(1,40,3):\n",
     "    print(i * \" \")\n",
-    "    print(\" \"+i * \" \")"
+    "    print(\" \"+i * \"$ \")"
    ]
   },
   {
