--- a/03-python-operators-conditional-statements.ipynb
+++ b/03-python-operators-conditional-statements.ipynb
@@ -354,6 +354,63 @@
    "id": "9d699bfb",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "students = [12,15,16,16]\n",
+    "for i in students:\n",
+    "    if "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e8ba309a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b is greater than a\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \n",
+    "b = 55\n",
+    "if b>=a:\n",
+    "    append.\n",
+    "    print(\" \")\n",
+    "else:\n",
+    "    a ==b\n",
+    "    print(\"\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a010eacc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stud =input(\"enter the marks :\")\n",
+    "if stud.isnumeric():\n",
+    "    marks = int(stud)\n",
+    "    if marks >= 95 :\n",
+    "        print(\"A++\")\n",
+    "    elif marks >= 80 and marks < 95:\n",
+    "        print(\"A\")\n",
+    "    elif marks >= 70 and marks < 80:\n",
+    "        print(\"B\")\n",
+    "    else:\n",
+    "        print(\"you are fail\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cc8f71d",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
